# ALVR

./: session_log.txt
alvr/client/: Cargo.toml
alvr/common/: Cargo.toml
alvr/common/src/: logging.rs  process.rs
alvr/dashboard/: package-lock.json
alvr/dashboard/src/: dashboard.rs  lib.rs  style.css
alvr/dashboard/src/basic_components/: up_down.rs
alvr/dashboard/src/menus/: settings.rs
alvr/server/: Cargo.toml
alvr/server_driver/src/: lib.rs
alvr/settings-schema/src/: lib.rs
alvr/web_server/: Cargo.toml  build.rs
alvr/web_server/src/: logging_backend.rs  main.rs
alvr/web_server/web_gui/js/app/: customSettings.js  driverList.js  settings.js
alvr/xtask/src/: main.rs
server_release_template/web_gui/js/app/: main.js  monitor.js  settings.js  setupWizard.js
server_release_template/web_gui/js/lib/: bootstrap.bundle.min.js
