[package]
name = 'alvr_web_server'
version = '12.1.0'
authors = ['Riccardo Zaglia <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[dependencies]
serde = '^1.0'
serde_json = '^1.0'
bincode = '^1.2.1'
settings-schema = { git = 'https://github.com/zarik5/settings-schema-rs' }
futures = '^0.3.5'
tokio = { version = '^0.2.20', features = ['macros', 'process', 'io-util', 'stream', 'udp'] }
warp = '=0.2.3'
log = '^0.4.8'
chrono = '^0.4.11'
fern = '^0.6.0'
msgbox = { git = 'https://github.com/bekker/msgbox-rs'}
alvr_common = { path = '../common' }
single-instance = '^0.1.2'
ipconfig = '^0.2.2' #todo: remove crate and get ip during handshake
webbrowser = '^0.5.5'
rust-embed="5.6.0"
rust-embed-utils = "5.0.0"
rust-embed-impl = "5.6.0"
walkdir = "2.3.1"
mime_guess = '2.0.3'

[features]
debug-embed = ["rust-embed-impl/debug-embed", "rust-embed-utils/debug-embed"]
interpolate-folder-path = ["rust-embed-impl/interpolate-folder-path"]

[build-dependencies]
serde_json = '^1.0'
alvr_common = { path = '../common' }
